force-app/main/default/objects/nFORCE__Route__c/fields/nFORCE__App__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__App__c</fullName>
    <description>This field is manually populated. It is required. This field is a unique identifier for the route, and is used, in conjunction with a group&apos;s app, to uniquely identify a requested app.</description>
    <label>App</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>