force-app/main/default/objects/nFORCE__Route__c/fields/nFORCE__Body__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Body__c</fullName>
    <description>This field is required. The admin manually populates this field. This field controls what and how data is displayed in the route. If a screen is being used, a layout type must be set. Otherwise, specific values can be set for Visualforce pages in the system.</description>
    <label>Body</label>
    <length>255</length>
    <type>Text</type>
</CustomField>