force-app/main/default/objects/nFORCE__Route__c/fields/nFORCE__Screen__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Screen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is manually populated. It is optional. This field looks up to the screen, which is typically used to determine what fields to display, and the view state (read only or editable) to display them in.</description>
    <inlineHelpText>The Screen used to render the content of this route.</inlineHelpText>
    <label>Screen</label>
    <referenceTo>nFORCE__Screen__c</referenceTo>
    <relationshipLabel>Routes</relationshipLabel>
    <relationshipName>Routes</relationshipName>
    <type>Lookup</type>
</CustomField>