force-app/main/default/objects/nFORCE__Route__c/listViews/nFORCE__All.listView-meta.xml
<ListView>
    <fullName>nFORCE__All</fullName>
    <columns>NAME</columns>
    <columns>nFORCE__App__c</columns>
    <columns>nFORCE__Body__c</columns>
    <columns>nFORCE__Icon_Class__c</columns>
    <columns>nFORCE__Navigation__c</columns>
    <columns>nFORCE__Sub_Navigation__c</columns>
    <columns>nFORCE__Topbar__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>